# libm3d

./: .gitignore  LICENSE  Makefile.am  README.md  configure.ac  m3d.pc.in
projects/vs2013/: lib3dmath.sln  lib3dmath.vcxproj  lib3dmath.vcxproj.filters
projects/xcode/lib3dmath.xcodeproj/: project.pbxproj
projects/xcode/lib3dmath.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/xcode/lib3dmath.xcodeproj/project.xcworkspace/xcshareddata/: 3dmath.xccheckout  lib3dmath.xccheckout
projects/xcode/lib3dmath.xcodeproj/project.xcworkspace/xcuserdata/joe.xcuserdatad/: UserInterfaceState.xcuserstate
projects/xcode/lib3dmath.xcodeproj/project.xcworkspace/xcuserdata/manvscode.xcuserdatad/: UserInterfaceState.xcuserstate
projects/xcode/lib3dmath.xcodeproj/xcuserdata/joe.xcuserdatad/xcschemes/: lib3dmath-static.xcscheme  xcschememanagement.plist
projects/xcode/lib3dmath.xcodeproj/xcuserdata/manvscode.xcuserdatad/xcschemes/: 3dmath.xcscheme  xcschememanagement.plist
src/: Makefile  Makefile.am  Makefile.in  algorithms.c  algorithms.h  easing.h  fixed-point-decimal.c  fixed-point-decimal.h  geographic.c  geographic.h  geometric-tools.c  geometric-tools.h  integer-arithmetic-tests.h  lib3dmath-config-vs2013.h  lib3dmath-config.h  lib3dmath-config.h.in  mat2.c  mat2.h  mat3.c  mat3.h  mat4.c  mat4.h  mathematics.c  mathematics.h  numerical-methods.c  numerical-methods.h  projections.h  quat.c  quat.h  scaler-double.h  scaler-float.h  scaler-long-double.h  stamp-h1  transforms.c  transforms.h  vec2.c  vec2.h  vec3.c  vec3.h  vec4.c  (+1 more)
tests/: Makefile.am  test-algorithms.c  test-all.c  test-fixed-point-decimal.c  test-geographic.c  test-geometric-tools.c  test-mat2.c  test-mat3.c  test-mat4.c  test-math.c  test-numerical-methods.c  test-projections.c  test-random-numbers.c  test-vec2.c  test-vec3.c  test-vec4.c  test.h
xcode/lib3dmath.xcodeproj/: project.pbxproj
xcode/lib3dmath.xcodeproj/project.xcworkspace/xcshareddata/: lib3dmath.xccheckout
xcode/lib3dmath.xcodeproj/project.xcworkspace/xcuserdata/manvscode.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/lib3dmath.xcodeproj/xcuserdata/manvscode.xcuserdatad/xcschemes/: lib3dmath.xcscheme  xcschememanagement.plist
